Correct dark mode hr color

--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -89,6 +89,10 @@ blockquote {
   border-left: 4px solid #fff;
 }
 
+hr {
+  background: var(--font-color_light);
+}
+
 .absolute {
   position: absolute;
 }
